--- a/Buildings.html
+++ b/Buildings.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The building</title>
-    <link rel="stylesheet" href="Buildings.css">
+    <link rel="stylesheet" href="buildings.css">
 </head>
 <body>
     <div class="header">
